Vue Starter SPA

--- a/resources/js/assets/main.css
+++ b/resources/js/assets/main.css
@@ -3,3 +3,51 @@ h1 {
 	width: 100%;
 	font-weight: 900;
 }
+
+.btn {
+	cursor: pointer;
+	display: inline-block;	
+	font-weight: 500;
+	line-height: 1.5;
+	color: #212529;
+	text-align: center;
+	text-decoration: none;
+	vertical-align: middle;
+	user-select: none;
+	background-color: transparent;
+	border: 1px solid transparent;	  
+	padding: .375rem .75rem;
+	font-size: 1rem;
+	border-radius: .25rem;
+	transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.btn-primary {
+	color: #fff;
+	background-color: var(--accent-primary); /* #C51B2A; */
+	border-color: var(--accent-primary); /* #C51B2A; */
+	padding: .5rem 2rem;
+	min-width: 130px;
+}
+
+.btn-secondary {
+	color: #fff;
+	background-color: #212529;
+	border-color: #212529;
+	padding: .5rem 2rem;
+	min-width: 130px;
+}
+
+.my-0 {
+	margin-top: 0 !important;
+	margin-bottom: 0 !important;
+}
+
+.mx-2 {
+	margin-right: .5rem !important;
+	margin-left: .5rem !important;
+}
+
+.btn:hover {
+	filter: brightness(1.2);
+}
