--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -124,7 +124,7 @@ iframe {
 	background: var(--scrollbar-thumb);
 }
 
-#app, .section {
+#app {
 	float: left;
 	width: 100%;
 	position: relative;
