--- a/resources/js/assets/code.css
+++ b/resources/js/assets/code.css
@@ -1,8 +1,13 @@
-code {
-    font-size: var(--code-font-size);
-	font-family: var(--font-family-code);
-	border: 1px solid var(--code-border);		
-	padding: 20px !important;
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
+
+:root {
+    /* code highlighterjs */
+	--code-font-family: 'JetBrains Mono', monospace, consolas;
+	--code-font-size: 14px;
+	--code-border: #00339911;
+	--code-line-numbers: #6885ba;
+	--code-line-border: #ff2233aa;
+	--code-line-underline: #00339911;
 }
 
 pre {
@@ -10,7 +15,10 @@ pre {
 }
 
 code, code.hljs {
-    padding: 10px !important;    
+    font-size: var(--code-font-size);
+	font-family: var(--code-font-family);
+	border: 1px solid var(--code-border);		
+	padding: 10px !important;
     overflow: hidden !important;
 }
 
@@ -19,7 +27,7 @@ code, code.hljs {
     float: left;
     width: 100%;
     font-size: var(--code-font-size);
-    font-family: 'JetBrains Mono', 'Fira Code', monospace, consolas;
+    font-family: var(--code-font-family);
 }
 
 .hljs-ln tbody {
