--- a/resources/js/assets/main.css
+++ b/resources/js/assets/main.css
@@ -1,5 +1,3 @@
-@import './code.css';
-
 h1 {
 	float: left;
 	width: 100%;
@@ -8,7 +6,7 @@ h1 {
 
 .btn {
 	cursor: pointer;
-	display: inline-block;	
+	display: inline-block;
 	font-weight: 500;
 	line-height: 1.5;
 	color: #212529;
@@ -17,18 +15,18 @@ h1 {
 	vertical-align: middle;
 	user-select: none;
 	background-color: transparent;
-	border: 1px solid transparent;	  
-	padding: .375rem .75rem;
+	border: 1px solid transparent;
+	padding: 0.375rem 0.75rem;
 	font-size: 1rem;
-	border-radius: .25rem;
-	transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+	border-radius: 0.25rem;
+	transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 .btn-primary {
 	color: #fff;
 	background-color: var(--accent-primary); /* #C51B2A; */
 	border-color: var(--accent-primary); /* #C51B2A; */
-	padding: .5rem 2rem;
+	padding: 0.5rem 2rem;
 	min-width: 130px;
 }
 
@@ -36,7 +34,7 @@ h1 {
 	color: #fff;
 	background-color: #212529;
 	border-color: #212529;
-	padding: .5rem 2rem;
+	padding: 0.5rem 2rem;
 	min-width: 130px;
 }
 
@@ -46,8 +44,8 @@ h1 {
 }
 
 .mx-2 {
-	margin-right: .5rem !important;
-	margin-left: .5rem !important;
+	margin-right: 0.5rem !important;
+	margin-left: 0.5rem !important;
 }
 
 .btn:hover {
