Code highlightjs toggle theme

--- a/resources/js/components/utils/CodeHighlight/css/light/mozilla-light.css
+++ b/resources/js/components/utils/CodeHighlight/css/light/mozilla-light.css
@@ -1,7 +1,7 @@
 /*!
   Theme: Mozilla
   Description: Light theme as seen on Mozilla.com
-  Author: Mozilla.com
+  Author: Marcys
 
   Current colors taken from Mozilla's CSS
 */
