--- a/resources/js/components/utils/CodeHighlight/css/dark/mozilla-dark.css
+++ b/resources/js/components/utils/CodeHighlight/css/dark/mozilla-dark.css
@@ -1,24 +1,21 @@
 /*!
   Theme: Mozilla
   Description: Light theme as seen on Mozilla.com
-  Author: Mozilla.com
+  Author: Marcys
 
   Current colors taken from Mozilla's CSS
 */
 
-/* Millenium Falcon */
 .dark-theme .hljs {
 	color: #dcc200 !important;
 	background: #232629 !important;
 }
 
-/* Death Star Comment */
 .dark-theme .hljs-comment,
 .dark-theme .hljs-quote {
 	color: #6a737d !important;
 }
 
-/* Darth Vader */
 .dark-theme .hljs-variable,
 .dark-theme .hljs-template-variable,
 .dark-theme .hljs-tag,
@@ -30,7 +27,6 @@
 	color: #0069c2 !important;
 }
 
-/* Threepio */
 .dark-theme .hljs-number,
 .dark-theme .hljs-built_in,
 .dark-theme .hljs-literal,
@@ -41,12 +37,10 @@
 	color: #e7ce56;
 }
 
-/* Luke Skywalker */
 .dark-theme .hljs-attribute {
 	color: #ee7c2b;
 }
 
-/* Obi Wan Kenobi */
 .dark-theme .hljs-string,
 .dark-theme .hljs-regexp,
 .dark-theme .hljs-symbol,
@@ -56,17 +50,15 @@
 	background-image: none;
 }
 
-.hljs-doctag {
+.dark-theme .hljs-doctag {
 	color: #ff6600 !important;
 }
 
-/* Yoda */
 .dark-theme .hljs-title,
 .dark-theme .hljs-section {
 	color: #007936 !important;
 }
 
-/* Mace Windu */
 .dark-theme .hljs-keyword,
 .dark-theme .hljs-selector-tag {
 	color: #0099ff !important;
